seaqt/QtQml/gen_qqmlcomponent.nim

import ./Qt6Qml_libs

{.push raises: [].}

from system/ansi_c import c_free

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config --cflags Qt6Qml")  & " -fPIC"
{.compile("gen_qqmlcomponent.cpp", cflags).}


type QQmlComponentCompilationModeEnum* = distinct cint
template PreferSynchronous*(_: type QQmlComponentCompilationModeEnum): untyped = 0
template Asynchronous*(_: type QQmlComponentCompilationModeEnum): untyped = 1


type QQmlComponentStatusEnum* = distinct cint
template Null*(_: type QQmlComponentStatusEnum): untyped = 0
template Ready*(_: type QQmlComponentStatusEnum): untyped = 1
template Loading*(_: type QQmlComponentStatusEnum): untyped = 2
template Error*(_: type QQmlComponentStatusEnum): untyped = 3


import ./gen_qqmlcomponent_types
export gen_qqmlcomponent_types

import
  ../QtCore/gen_qcoreevent_types,
  ../QtCore/gen_qmetaobject_types,
  ../QtCore/gen_qobject,
  ../QtCore/gen_qobjectdefs_types,
  ../QtCore/gen_qurl_types,
  ../QtCore/gen_qvariant_types,
  ./gen_qqmlcontext_types,
  ./gen_qqmlengine_types,
  ./gen_qqmlerror_types,
  ./gen_qqmlincubator_types,
  std/tables
export
  gen_qcoreevent_types,
  gen_qmetaobject_types,
  gen_qobject,
  gen_qobjectdefs_types,
  gen_qurl_types,
  gen_qvariant_types,
  gen_qqmlcontext_types,
  gen_qqmlengine_types,
  gen_qqmlerror_types,
  gen_qqmlincubator_types

type cQQmlComponent*{.exportc: "QQmlComponent", incompleteStruct.} = object

proc fcQQmlComponent_new(): ptr cQQmlComponent {.importc: "QQmlComponent_new".}
proc fcQQmlComponent_new2(param1: pointer): ptr cQQmlComponent {.importc: "QQmlComponent_new2".}
proc fcQQmlComponent_new3(param1: pointer, fileName: struct_miqt_string): ptr cQQmlComponent {.importc: "QQmlComponent_new3".}
proc fcQQmlComponent_new4(param1: pointer, fileName: struct_miqt_string, mode: cint): ptr cQQmlComponent {.importc: "QQmlComponent_new4".}
proc fcQQmlComponent_new5(param1: pointer, url: pointer): ptr cQQmlComponent {.importc: "QQmlComponent_new5".}
proc fcQQmlComponent_new6(param1: pointer, url: pointer, mode: cint): ptr cQQmlComponent {.importc: "QQmlComponent_new6".}
proc fcQQmlComponent_new7(parent: pointer): ptr cQQmlComponent {.importc: "QQmlComponent_new7".}
proc fcQQmlComponent_new8(param1: pointer, parent: pointer): ptr cQQmlComponent {.importc: "QQmlComponent_new8".}
proc fcQQmlComponent_new9(param1: pointer, fileName: struct_miqt_string, parent: pointer): ptr cQQmlComponent {.importc: "QQmlComponent_new9".}
proc fcQQmlComponent_new10(param1: pointer, fileName: struct_miqt_string, mode: cint, parent: pointer): ptr cQQmlComponent {.importc: "QQmlComponent_new10".}
proc fcQQmlComponent_new11(param1: pointer, url: pointer, parent: pointer): ptr cQQmlComponent {.importc: "QQmlComponent_new11".}
proc fcQQmlComponent_new12(param1: pointer, url: pointer, mode: cint, parent: pointer): ptr cQQmlComponent {.importc: "QQmlComponent_new12".}
proc fcQQmlComponent_metaObject(self: pointer, ): pointer {.importc: "QQmlComponent_metaObject".}
proc fcQQmlComponent_metacast(self: pointer, param1: cstring): pointer {.importc: "QQmlComponent_metacast".}
proc fcQQmlComponent_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QQmlComponent_metacall".}
proc fcQQmlComponent_tr(s: cstring): struct_miqt_string {.importc: "QQmlComponent_tr".}
proc fcQQmlComponent_status(self: pointer, ): cint {.importc: "QQmlComponent_status".}
proc fcQQmlComponent_isNull(self: pointer, ): bool {.importc: "QQmlComponent_isNull".}
proc fcQQmlComponent_isReady(self: pointer, ): bool {.importc: "QQmlComponent_isReady".}
proc fcQQmlComponent_isError(self: pointer, ): bool {.importc: "QQmlComponent_isError".}
proc fcQQmlComponent_isLoading(self: pointer, ): bool {.importc: "QQmlComponent_isLoading".}
proc fcQQmlComponent_isBound(self: pointer, ): bool {.importc: "QQmlComponent_isBound".}
proc fcQQmlComponent_errors(self: pointer, ): struct_miqt_array {.importc: "QQmlComponent_errors".}
proc fcQQmlComponent_errorString(self: pointer, ): struct_miqt_string {.importc: "QQmlComponent_errorString".}
proc fcQQmlComponent_progress(self: pointer, ): float64 {.importc: "QQmlComponent_progress".}
proc fcQQmlComponent_url(self: pointer, ): pointer {.importc: "QQmlComponent_url".}
proc fcQQmlComponent_create(self: pointer, context: pointer): pointer {.importc: "QQmlComponent_create".}
proc fcQQmlComponent_createWithInitialProperties(self: pointer, initialProperties: struct_miqt_map): pointer {.importc: "QQmlComponent_createWithInitialProperties".}
proc fcQQmlComponent_setInitialProperties(self: pointer, component: pointer, properties: struct_miqt_map): void {.importc: "QQmlComponent_setInitialProperties".}
proc fcQQmlComponent_beginCreate(self: pointer, param1: pointer): pointer {.importc: "QQmlComponent_beginCreate".}
proc fcQQmlComponent_completeCreate(self: pointer, ): void {.importc: "QQmlComponent_completeCreate".}
proc fcQQmlComponent_createWithQQmlIncubator(self: pointer, param1: pointer): void {.importc: "QQmlComponent_createWithQQmlIncubator".}
proc fcQQmlComponent_creationContext(self: pointer, ): pointer {.importc: "QQmlComponent_creationContext".}
proc fcQQmlComponent_engine(self: pointer, ): pointer {.importc: "QQmlComponent_engine".}
proc fcQQmlComponent_loadUrl(self: pointer, url: pointer): void {.importc: "QQmlComponent_loadUrl".}
proc fcQQmlComponent_loadUrl2(self: pointer, url: pointer, mode: cint): void {.importc: "QQmlComponent_loadUrl2".}
proc fcQQmlComponent_setData(self: pointer, param1: struct_miqt_string, baseUrl: pointer): void {.importc: "QQmlComponent_setData".}
proc fcQQmlComponent_statusChanged(self: pointer, param1: cint): void {.importc: "QQmlComponent_statusChanged".}
proc fcQQmlComponent_connect_statusChanged(self: pointer, slot: int) {.importc: "QQmlComponent_connect_statusChanged".}
proc fcQQmlComponent_progressChanged(self: pointer, param1: float64): void {.importc: "QQmlComponent_progressChanged".}
proc fcQQmlComponent_connect_progressChanged(self: pointer, slot: int) {.importc: "QQmlComponent_connect_progressChanged".}
proc fcQQmlComponent_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QQmlComponent_tr2".}
proc fcQQmlComponent_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QQmlComponent_tr3".}
proc fcQQmlComponent_createWithInitialProperties2(self: pointer, initialProperties: struct_miqt_map, context: pointer): pointer {.importc: "QQmlComponent_createWithInitialProperties2".}
proc fcQQmlComponent_create2(self: pointer, param1: pointer, context: pointer): void {.importc: "QQmlComponent_create2".}
proc fcQQmlComponent_create3(self: pointer, param1: pointer, context: pointer, forContext: pointer): void {.importc: "QQmlComponent_create3".}
proc fQQmlComponent_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QQmlComponent_virtualbase_metaObject".}
proc fcQQmlComponent_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QQmlComponent_override_virtual_metaObject".}
proc fQQmlComponent_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QQmlComponent_virtualbase_metacast".}
proc fcQQmlComponent_override_virtual_metacast(self: pointer, slot: int) {.importc: "QQmlComponent_override_virtual_metacast".}
proc fQQmlComponent_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QQmlComponent_virtualbase_metacall".}
proc fcQQmlComponent_override_virtual_metacall(self: pointer, slot: int) {.importc: "QQmlComponent_override_virtual_metacall".}
proc fQQmlComponent_virtualbase_create(self: pointer, context: pointer): pointer{.importc: "QQmlComponent_virtualbase_create".}
proc fcQQmlComponent_override_virtual_create(self: pointer, slot: int) {.importc: "QQmlComponent_override_virtual_create".}
proc fQQmlComponent_virtualbase_beginCreate(self: pointer, param1: pointer): pointer{.importc: "QQmlComponent_virtualbase_beginCreate".}
proc fcQQmlComponent_override_virtual_beginCreate(self: pointer, slot: int) {.importc: "QQmlComponent_override_virtual_beginCreate".}
proc fQQmlComponent_virtualbase_completeCreate(self: pointer, ): void{.importc: "QQmlComponent_virtualbase_completeCreate".}
proc fcQQmlComponent_override_virtual_completeCreate(self: pointer, slot: int) {.importc: "QQmlComponent_override_virtual_completeCreate".}
proc fQQmlComponent_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QQmlComponent_virtualbase_event".}
proc fcQQmlComponent_override_virtual_event(self: pointer, slot: int) {.importc: "QQmlComponent_override_virtual_event".}
proc fQQmlComponent_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QQmlComponent_virtualbase_eventFilter".}
proc fcQQmlComponent_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QQmlComponent_override_virtual_eventFilter".}
proc fQQmlComponent_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QQmlComponent_virtualbase_timerEvent".}
proc fcQQmlComponent_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QQmlComponent_override_virtual_timerEvent".}
proc fQQmlComponent_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QQmlComponent_virtualbase_childEvent".}
proc fcQQmlComponent_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QQmlComponent_override_virtual_childEvent".}
proc fQQmlComponent_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QQmlComponent_virtualbase_customEvent".}
proc fcQQmlComponent_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QQmlComponent_override_virtual_customEvent".}
proc fQQmlComponent_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QQmlComponent_virtualbase_connectNotify".}
proc fcQQmlComponent_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QQmlComponent_override_virtual_connectNotify".}
proc fQQmlComponent_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QQmlComponent_virtualbase_disconnectNotify".}
proc fcQQmlComponent_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QQmlComponent_override_virtual_disconnectNotify".}
proc fcQQmlComponent_staticMetaObject(): pointer {.importc: "QQmlComponent_staticMetaObject".}
proc fcQQmlComponent_delete(self: pointer) {.importc: "QQmlComponent_delete".}


func init*(T: type gen_qqmlcomponent_types.QQmlComponent, h: ptr cQQmlComponent): gen_qqmlcomponent_types.QQmlComponent =
  T(h: h)
proc create*(T: type gen_qqmlcomponent_types.QQmlComponent, ): gen_qqmlcomponent_types.QQmlComponent =
  gen_qqmlcomponent_types.QQmlComponent.init(fcQQmlComponent_new())

proc create*(T: type gen_qqmlcomponent_types.QQmlComponent, param1: gen_qqmlengine_types.QQmlEngine): gen_qqmlcomponent_types.QQmlComponent =
  gen_qqmlcomponent_types.QQmlComponent.init(fcQQmlComponent_new2(param1.h))

proc create*(T: type gen_qqmlcomponent_types.QQmlComponent, param1: gen_qqmlengine_types.QQmlEngine, fileName: string): gen_qqmlcomponent_types.QQmlComponent =
  gen_qqmlcomponent_types.QQmlComponent.init(fcQQmlComponent_new3(param1.h, struct_miqt_string(data: fileName, len: csize_t(len(fileName)))))
